[tool.poetry]
name = "aprsbcn"
version = "0.1.0"
description = ""
authors = ["Evan Pratten <ewpratten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
aprslib = "^0.6.47"
pyowm = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
